Fixed overflow caused by container in footer

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -330,13 +330,13 @@ i.fas:nth-child(2) {
 
 /* 9. Footer section */
 
-#top>footer>div:nth-child(2)>div>a:nth-child(1),
-#top>footer>div:nth-child(2)>div>a:nth-child(2) {
+footer > div:nth-child(2) > div:nth-child(1) > div > a:nth-child(1),
+footer > div:nth-child(2) > div:nth-child(1) > div > a:nth-child(2) {
     padding: 10px;
     font-size: 1rem;
 }
 
-#top>footer>div {
+footer>div {
     background-color: rgb(32, 32, 32);
 }
 
